--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2048 Game</title>
+  <link rel="icon" href="./images/sport.svg" />
   <link rel="stylesheet" href="styles.css">
   <script src="script.js" type="module"></script>
 </head>
