--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
   <script src="script.js" type="module"></script>
 </head>
 <body>
-  <div id="game-board"></div>
+  <div id="game-container">
+    <div id="score-container">
+      <h1 id="score">Score: 0</h1>
+    </div>
+    <div id="game-board"></div>
+  </div>  
 </body>
 </html>
