--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,9 @@
 <body>
   <div id="game-container">
     <div id="score-container">
+      <h1 id="heigh-score">High Score: 0</h1>
       <h1 id="score">Score: 0</h1>
-    </div>
+  </div>
     <div id="game-board"></div>
   </div>  
 </body>
